# portfolio

./: .gitmodules  README.md
AI+Machine Learning Projects/Letter Identification using Native Bayesian Learning/src/: CMakeLists.txt  bitmap.cpp  bitmap.hpp  main.cpp
AI+Machine Learning Projects/Wheelbot/: CMakeLists.txt  MDP.cpp  MDP.h  Robot.h  Simulator.cpp  Simulator.h  Vector2D.h  main.cpp
Arithmetic Parser and Evaluator/: README.md  llistint.cpp  makefile  stackintmain.cpp
C++ projects/: README.md
Debugger/: AddStatement.h  Debugger  Debugger.cpp  DivStatement.h  EndStatement.cpp  GOTOStatement.cpp  GOTOStatement.h  IFStatement.cpp  IFStatement.h  LetStatement.cpp  LetStatement.h  PrintStatement.h  ProgramState.h  README.md  Statement.h  SubStatement.cpp  SubStatement.h  llistint.cpp  m_sort.h  main_window.cpp  main_window.h  moc_error_window.cpp  moc_main_window.cpp  values_window.cpp  values_window.h
Exam Scheduler - AVL Tree/: README.md  avlbst.h  examScheduler.cpp  testFile.txt
Jeopardy Final Version/: .project
Maze Solver/: Makefile  Maze  README.md  kruskalishmaze.h  mazedemo.cpp  mazedisplay.cpp  mazedisplay.h  mazesolver.h  moc_mazedisplay.cpp  testHeap  testHeap.cpp  visitedtracker.cpp  visitedtracker.h
MovieViewer/: MoviesViewController.swift  Podfile  README.md
React Native Projects/: README.md
RecipMe/: .Podfile.swp  FeaturedItem.swift  HomeFeedCollectionViewCell.swift  Podfile  README.md
Swift (iOS) Projects/: README 2.md  README.md
Tipper/: README.md
TroJams/: .project  README.md
iOS Projects/: README.md
(+448 files in other folders)
